more tinkering of the scrollbar - I have issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -124,7 +124,8 @@ header{background-color: white !important;}
 }
 ::-webkit-scrollbar-thumb{
     background-color: #020887;
-    border-radius: 100vw;
+    border-top-left-radius: 100vw;
+    border-bottom-left-radius: 100vw;
     border: .1em solid #E6E6E6
 }
 ::-webkit-scrollbar-thumb:hover{
